[package]
name = "llpr"
description = "low-level PDF reader"
version = "0.1.2"
authors = ["Ferruccio Barletta <ferruccio.barletta@gmail.com>"]
build = "build.rs"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ferruccio/llpr"
repository = "https://github.com/ferruccio/llpr"
keywords = ["pdf"]
categories = ["parsing"]

[dependencies]
phf = "0.8.0"
inflate = "0.4.5"
thiserror = "1.0.24"

[build-dependencies]
phf_codegen = "0.8.0"

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
criterion = "0.3.4"
